# fastmcp-sqltools

./: README.md  pyproject.toml
src/fastmcp_sqltools/: __init__.py  server.py
tests/: conftest.py  test_server.py
