[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastmcp-sqltools"
version = "0.1.3"
description = "FastMCP SQL Tools with asyncpg for database operations"
authors = [
  { name = "Ola Tarkowska", email = "ola@entrypoint.tech" }
]
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "asyncpg",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "reportlab>=4.0.0",
]

[project.scripts]
fastmcp-sqltools = "fastmcp_sqltools.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fastmcp_sqltools"]